syntax =  "proto3";

package GrpcWishlist;

message WishlistRequest {
    int32 id = 1;
};

message WishlistResponse {
    repeated Item items = 1;
};

message Item {
    int32 id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
};

message ItemsRequest {
    repeated int32 ids = 1;
}

message ItemsResponse {
    repeated Item items = 1;
};

service WishlistService {
    rpc GetWishlist (WishlistRequest) returns (WishlistResponse) {}
};

service ItemsService {
    rpc GetItems (ItemsRequest) returns (ItemsResponse);
}